[gd_scene load_steps=3 format=2]

[ext_resource path="res://Recursos/Temas/default.tres" type="Theme" id=1]
[ext_resource path="res://UiScene/Script/creacionDeJuego.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.247059 )

[node name="Control" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -177.5
margin_right = 256.0
margin_bottom = 177.5
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 348.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_right = 498.0
margin_bottom = 63.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 488.0
margin_bottom = 53.0
text = "Nuevo Juego"
align = 1
valign = 1

[node name="atras" type="Button" parent="Control/VBoxContainer"]
margin_top = 67.0
margin_right = 127.0
margin_bottom = 116.0
size_flags_horizontal = 0
text = "Atr√°s"

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
margin_top = 120.0
margin_right = 498.0
margin_bottom = 124.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 128.0
margin_right = 498.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 488.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 478.0
margin_bottom = 43.0
text = "Nombre:"
align = 1

[node name="nombreEdit" type="LineEdit" parent="Control/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 47.0
margin_right = 478.0
margin_bottom = 100.0
align = 1
max_length = 20
expand_to_text_length = true
placeholder_text = "Tu juego"

[node name="MarginContainer3" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 252.0
margin_right = 498.0
margin_bottom = 341.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="aceptar" type="Button" parent="Control/VBoxContainer/MarginContainer3"]
margin_left = 162.0
margin_top = 20.0
margin_right = 335.0
margin_bottom = 69.0
size_flags_horizontal = 4
text = "Aceptar"

[connection signal="pressed" from="Control/VBoxContainer/atras" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer3/aceptar" to="." method="_on_aceptar_pressed"]
